unpackaged/main/default/objects/Order_Influence__c/Order_Influence__c.object-meta.xml
<CustomObject>
    <label>Order Influence</label>
    <nameField>
        <displayFormat>O-F--{00000000}</displayFormat>
        <label>Order Influence #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Influences</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>