unpackaged/main/default/objects/Order_Influence__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Order Influences</relationshipLabel>
    <relationshipName>Order_Influences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>