unpackaged/main/default/objects/Order_Influence__c/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>By Default, an Order Influence is active for 30 days.</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>