unpackaged/main/default/objects/Order_Influence__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Order Influences</relationshipLabel>
    <relationshipName>Order_Influences</relationshipName>
    <type>Lookup</type>
</CustomField>