unpackaged/main/default/objects/Order_Influence__c/fields/Customer_Care_Rep_Full_Name__c.field-meta.xml
<CustomField>
    <fullName>Customer_Care_Rep_Full_Name__c</fullName>
    <label>Customer Care Rep Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>