unpackaged/main/default/objects/Order_Influence__c/fields/Matching_Attribute__c.field-meta.xml
<CustomField>
    <fullName>Matching_Attribute__c</fullName>
    <caseSensitive>true</caseSensitive>
    <label>Matching Attribute</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>