unpackaged/main/default/objects/Order_Influence__c/fields/Product_Line__c.field-meta.xml
<CustomField>
    <fullName>Product_Line__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Product Line</label>
    <referenceTo>Product_Line__c</referenceTo>
    <relationshipLabel>Order Influences</relationshipLabel>
    <relationshipName>Order_Influences</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>